--- a/index.css
+++ b/index.css
@@ -4,63 +4,49 @@ body {
 }
 .header {
 	background-color: rgba(255, 255, 255, 0.75);
-
+	height: 100px;
 }
-
 /*контейнер, параметры колонок и отмена обтекания*/ 
 .container {
 	width: 1170px;
 	margin: 0 auto;
 }
-
 .row:after {
 	content: "";
 	clear: both;
 	display: block;
 }
-
-.logo-col-md-3 {
-	width: 25%;
+.logo {
 	float: left;
 	padding: 10px 0px;
-	margin-top: 21px;
-	margin-bottom: 28px;
+	margin-top: 25px;
+	height: 40px;
 }
-.menu-col-md-6 {
-	width: 50%;
+.menu {
 	float: left;
 }
-
-.search-col-md-3 {
-	width: 25%;
+.main-menu {
 	float: left;
 }
 .search {
 	float: left;
-	padding: 10px 0px;
-	margin: 21px 0px;
 }
 .cart {
 	float: right;
-	padding: 10px 0px;
-	margin: 10px 0px;
 }
-
- /*Главное меню*/
+/*Главное меню*/
 .main-menu > li {
-	margin-top: 31px;
+	margin-top: 25px;
 	margin-bottom: 10px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 35px;
-	padding-right: 35px;
+	padding: 10px 40px 10px 40px;
 	width: 24%;
 	float: left;
 	border-left: 1px solid #2d71b8;
 	font-size: 21px;
 	box-sizing: border-box;
-	/*color: #2d71b8;*/
-
+}
+.products {
+	position: relative;
 }
 .main-menu > li:nth-child(4) {
 	border-right: 1px solid #2d71b8;
@@ -71,36 +57,31 @@ a {
 }
 ul > li:hover a  {
 	color: white;
+	text-decoration: none;
 } 
-
 .products ul {
 	position: absolute;
 	display: none;
 }
-
- li ul a {
+li ul a {
     display: block; /* Ссылка как блочный элемент */
-    padding: 10px 5px 0px 30px; /* Поля вокруг надписи */
+    padding: 10px 15px 0px 30px; /* Поля вокруг надписи */
    color: white;/* Цвет текста */
     background-color: #2d71b8; /* Цвет фона */
-    width: 247px;
-    margin-left: -36px;
-    /*padding-top: 10px;*/
-
+    width: 267px;
+    margin-left: -41px;
+    padding-top: 10px;
+    text-decoration: none;
 }
-
 .main-menu li:hover{
 	display: block; 
-	/*color: white; */
 	background-color: #2d71b8;
-	
 }
-
 .products::after {
 			content: url(images/check_mark.png);
 			position: absolute;
-			top: 40px;
-			left: 730px;
+			top: 10px;
+			padding-left: 80px;
 }
 /*подменю*/
 li:hover ul { 
@@ -116,58 +97,47 @@ li:hover ul {
 li li:hover a{
 	background-color: white;
 	color: #2d71b8;
-
 }
-
-
 /*форма поиска*/
-
 input {
   height: 40px;
-  width: 180px;
+  width: 200px;
   padding: 10px;
-  /*margin: 0 auto;*/
-  position: absolute;
+  position: relative;
   background: transparent;
   border: 1px solid #2d71b8;
   color: #2d71b8;
+  margin-top: 30px;
 
 }
-
   input[type="search"] { 
     font-size: 21px;
     color: #2d71b8;
-}
 
+}
 input::-webkit-input-placeholder { 
 	color: #2d71b8;
 	font-size: 21px;
 }
-
 input[type="image"] {
-  	/*position: absolute;*/
+  	position: absolute;
   	background-color: #2d71b8;
-  	/*margin: 5px;*/
-  	margin-left: 144px;
-  	margin-top: 4px;
-	height: 10px;
-  	width: 10px;
+  	margin-left: -35px;
+  	margin-top: 35px;
+  	padding: 7px;
+  	height: 30px;
+  	width: 30px;
 }
-
-
 /*тележка*/
-
 .cart-cart {
+	float: right;
 	position: relative;
-   	/*right: 375px;*/
-	margin-top: 11px;
+    margin-top: -42px;
 	padding: 10px;
 	padding-bottom: 5px;
 	border: white solid;
 	background: white;
-	/*display: inline-block;*/
 }
-
 .cart-index {
 	content: "4";
 	text-align: center;
@@ -181,96 +151,275 @@ input[type="image"] {
 	background-color: #2d71b8;
 	border-radius: 11px;
 }
-
-
-
 /*место под слайдер*/
-
-.slide-col-md-12 {
+.slide {
 	background-color: rgba(0, 0, 0, 0.25);
 	height: 400px;
 	width: 100%;
+	border-bottom: solid 1px white;
 }
 /*боковое меню*/
-
-.aside-col-md-3 {
-	width: 220px;
+.aside {
+	/*width: 25%;*/
 	float: left;
-	top: 500px;
-   	background-color: rgba(202, 219, 237, 0.5);
+   	background-color: rgba(202, 219, 237, 0.4);
    	color: white;
    	font-size: 18px;
-   	height: 600px;
-   	padding: 25px 25px;
-
+   	height: 843px;
 }
-.aside-col-md-3 li {
-	list-style-type: square;
-	padding-left: 15px;
-
+.aside-show-more a{
+	position: absolute;
+	color: white;
+	margin-left: 25px;
+	margin-top: 130px;
+	text-decoration: none;
+}
+input[type="checkbox"] {
+	background-color: #2d71b8;
+	display: none;
+	padding-top: 20px;
+}
+label{
+	position: relative;
+}
+label:before {
+	content: "";
+	display: block;
+	width: 10px;
+	height: 10px;
+	border: 1px solid white;
+	float: left;
+	background-color: transparent;
+	margin-top: 8px;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+input[type="checkbox"]:checked + label:before {
+	background-color: white;
+	border: 1px solid white;
+}
+.aside-check {
+	text-transform: uppercase;
+	margin-left: 10px;
+	margin-top: 50px;
+}
+.aside-button {
+	text-decoration: none;
+	position: absolute;
+	width: 210px;
+	height: 50px;
+	background: url('images/details-aside-background.png');
+	border: solid white 1px;
+	margin-left: 20px;
+	margin-top: 170px;
 }
 
 /*основной контент (каталог)*/
 
-.content-col-md-9 {
-	width: 75%;
+.content {
+		float: left;
+}
+.catalog {
 	float: left;
-	/*float: right;*/
-	/*position: absolute;*/
-
 }
-
 .way {
-	padding: 25px 35px;
-}
+	/*float: left;*/
 
+
+}
 .way a {
-	
+	color: #fff;
+	text-decoration: none;
+	font-size: 14pt;
+		}
+
+.content-head {
+	float: left;
+	margin-left: 20px;
+	font-size: 33px;
 	color: white;
 }
-/*.content-head {
-	float: left;
+/*.selected {
+	float: right;
+	margin-left: 540px;
+	margin-top: -30px;
 }*/
+
 .selected {
 	float: right;
-	margin-bottom: 20px;
+	margin-right: 0px;
+	color:white;
+	padding-left: 19px;
+	font-size: 18px;
+	min-width: 268px;
+	min-height: 38px;
+	background:#2c71b8;
+	border: solid 1px white;
 }
-
-.catalog {
+.selected option:hover a{
+	display: block;
+	background-color: white;
+}
+.product {
+	position: relative;
+	float: left;
+	display: block;
+	width: 270px;
+	height: 653px;
+	margin-top: 20px;
+	/*margin-right: 10px;*/
+	margin-left: 20px;
+}
+.product-top {
+		position: absolute; 
+		text-align: center;
+		width: 270px;
+		height: 180px;
+		background-color: rgba(255, 255, 255, 0.7);
+		border-top: solid 1px white;
+		border-left: solid 1px white;
+		border-right: solid 1px white;
+}
+.product-bottom {
+	width: 270px;
+	height: 473px;
+	position: absolute; 
+	margin-top: 180px; 
+	background-color: rgba(44, 113, 184, 0.75);
+	border: solid 1px white;
+}
+.device {
+	position: absolute;
+	/*text-align: center;*/
+	width: 103px;
+	height: 90px;
+	margin-left: 85px;
+	margin-top: 45px;
+}
+.target {
+	background: url('images/target-blue.png') center;
+	background-repeat: no-repeat;
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	margin-left: 230px;
 	margin-top: 10px;
-	width: 75%;
-	float: left;
+	padding: 10px, 10px;
+	border: solid #2d71b8 1px;
+}
+.target:hover {
+	border-style: border-box;
+	background-image: url(images/target-white.png);
+	background-color: #2c71b8;
+}
+.heart {
+	background: url('images/heart-blue.png') center;
+	background-repeat: no-repeat;
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	margin-left: 230px;
+	margin-top: 50px;
+	padding: 10px, 10px;
+	border: solid #2d71b8 1px;
+}
+.heart:hover {
+	border:box;
+	background-image: url(images/heart-white.png);
+	background-color: #2c71b8;
+	}	
+
+
+.device-info {
+	font-size: 21px;
+	color: white;
+	left: 15px;
+	/*padding-top: 10px;*/
+	/*text-align: left;*/
+	padding-left: 20px;
 
 }
+.device-name {
+	font-size: 30px;
+	font-weight: bold;
+	padding-left: 20px;
+}
+.device-price {
+	font-size: 48px;
+	font-weight: bold;
+	margin-top: 10px;
+	text-align: center;
+}
 
-
-.product-col-№1 {
-	width: 25%;
-	float: left;
+.details-button {
+	position: absolute;
+	width: 210px;
+	height: 50px;
+	background: url('images/details-aside-background.png');
+	border: solid white 1px;
 	margin-left: 30px;
-	margin-right: 80px;
-	
+	margin-top: -20px;
+	margin-bottom: 40px;
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
 }
-.product-col-№2 {
-	width: 25%;
-	float: left;
-	/*margin-right: 40px;*/
-	
+.details-button:hover {
+	/*border:box;*/
+	border: solid 1px #2c71b8;
+	background: white;
+	color: #2c71b8; 
+	}	
+
+
+.add-cart-button {
+	position: absolute;
+	width: 210px;
+	height: 50px;
+	background-color: rgba(255, 255, 255, 0.25);
+	border: solid white 1px;
+	margin-left: 30px;
+	margin-top: 40px;
+	color: white;
+	text-transform: uppercase;
+	background-repeat: no-repeat;
+	font-weight: bold;
 }
-.product-col-№3 {
-	width: 25%;
-	float: left;
-	margin-left: 80px;*/
+.add-cart-button:hover {
+	/*border:box;*/
+	border: solid 1px #2c71b8;
+	background: white;
+	color: #2c71b8;
+}	
+.addcart {
+	margin-top: -20px;
+	margin-left: 160px;
+	width: 20px;
+	height: 20px;
+	background-color: black;
+	position: absolute;
+	background: url('images/cart-white.png');
+	background-repeat: no-repeat;
 }
-
-
-
-
-
+.addcart:hover {
+	background: url('images/cart-blue.png');
+	background-repeat: no-repeat;
+}
+.load-more {
+	text-align: center;
+	margin-top: 30px;
+}
+.load-more a {
+	text-decoration: none;
+	font-size: 30px;
+	text-align: auto;
+	margin-top: 30px;
+	color: white;
+}
 /*подвал*/
 footer {
    	position: absolute;
-	margin-top: 2830px;
+	margin-top: 330px;
 	width: 100%;
    	height: 100px;
    	background-color: rgba(202, 219, 237, 0.8);
@@ -278,7 +427,6 @@ footer {
 .footer_text {
 	font-size: 18px;
    	color: #2d71b8;
-   	bottom: 35px;
-   	position: absolute;
-   	left: 880px;
+   	padding-top: 35px;
+   	text-align: center;
 }
